# challenges

./: Cargo.toml
advent-of-code/2021/: .gitignore
advent-of-code/2021/day11/: octopus.rs
advent-of-code/2021/day3/: main.rs
advent-of-code/2021/day6/: lanternfish.rs  main.rs
advent-of-code/2022/day01/: Main.hs  day01.hs
advent-of-code/2022/day02/: Main.hs
advent-of-code/2022/day03/: Main.hs
advent-of-code/2022/day04/: Main.hs
advent-of-code/2022/day05/: Main.hs
advent-of-code/2022/day06/: Main.hs
day1/: main.rs
day10/: main.rs
day11/: main.rs
day2/: main.rs
day4/: bingo.rs  main.rs
day5/: lines.rs  main.rs
day7/: main.rs
day8/: main.rs
day9/: main.rs
